# ElfEntrypointHook

./: CMakeLists.txt  Dockerfile  README.md
src/: elf_util.cpp  elf_util.hpp  lib.cpp  main.cpp
